# xetcd

./: README.md  components.d.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  windi.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: mod.rs
src-tauri/src/cmd/: mod.rs
src-tauri/src/result/: lib.rs
src-tauri/src/service/: db.rs  etcd.rs  mod.rs  tls.rs
src-tauri/src/types/: dto.rs  mod.rs
src/apis/: api.ts  tauri.ts
src/components/: Greet.vue
src/layout/: index.vue
src/layout/components/: AppMain.vue  Navbar.vue
src/route/: etcdui.ts  index.ts
src/routes/: index.ts
src/routes/etcd/: cluster.ts  dataman.ts  index.ts  role.ts  service.ts  user.ts
src/stores/: index.ts
src/views/: home.vue
src/views/cluster/: home.vue
src/views/dataman/: home.vue
src/views/misc/: 404.vue  notimplmented.vue
src/views/role/: home.vue
src/views/roleman/: index.vue
src/views/serviceman/: home.vue
src/views/user/: home.vue
