[package]
name = "etcdui"
version = "1.0.0"
description = "A Etcd Manager"
authors = ["G.Brian"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "devtools"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
etcd-client = "0.12"
tokio = { version = "1.33.0", features = ["full"] }
tokio-test = { version = "0.4.3" }
redb = "1.2.0"
tempfile = "3.1.0"
home = "0.5.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
